<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.SignUpFragment">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_xxx_medium"
        android:background="#FAFAFA">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_small"
            android:layout_marginTop="@dimen/size_medium"
            android:fontFamily="@font/montserrat_bold"
            android:letterSpacing="0.05"
            android:text="@string/text_create_an_account"
            android:textColor="@color/colorTextMain"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small"
                android:layout_marginEnd="@dimen/size_xx_small"
                android:layout_weight="1"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    style="@style/InputTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small"
                android:layout_marginStart="@dimen/size_xx_small"
                android:layout_weight="1"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_surname"
                    style="@style/InputTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_surname"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/InputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/size_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/InputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_member_of_civil_society_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small"
            android:checked="false"
            android:textColor="@color/colorTextMain"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/text_member_of_civil_society"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_member_of_civil_society"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            android:layout_marginTop="@dimen/size_x_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_member_of_civil_society"
                style="@style/InputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_civil_society_organization"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_sign_up"
            android:background="@drawable/bg_button_primary" />

        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="4dp"
            android:layout_marginTop="@dimen/size_x_medium"
            android:text="@string/text_already_have_an_account"
            android:textColor="@color/colorBgDark"
            android:textSize="14sp" />

    </LinearLayout>

</layout>
